# ai-mem

./: .env.example  .gitignore  Dockerfile  README.md  TROUBLESHOOTING.md  hooks.json  pyproject.toml
docs/: api-reference.md  architecture.md  configuration.md  development.md  endless_mode.md  getting-started.md  hooks.md  mcp-tools.md  presets.md  proxies.md  snapshots.md
plugin/: README.md  package.json
scripts/: bootstrap.sh  install-claude-plugin.sh  install-hooks.sh  install-jetbrains-tools.sh  install-mcp-claude-desktop.sh  install-mcp-cursor.sh  install-neovim.sh  install-vscode-tasks.sh  run-all.sh  run-anthropic-full.sh  run-anthropic-proxy.sh  run-anthropic-stack.sh  run-azure-full.sh  run-azure-proxy.sh  run-azure-stack.sh  run-bedrock-full.sh  run-bedrock-proxy.sh  run-bedrock-stack.sh  run-dual-full.sh  run-dual-stack.sh  run-full.sh  run-gemini-full.sh  run-gemini-proxy.sh  run-gemini-stack.sh  run-mcp.sh  run-proxy.sh  run-stack.sh  run.sh  uninstall-claude-plugin.sh
tests/: conftest.py  test_adapters.py  test_additional_features.py  test_batch_optimization.py  test_chunking.py  test_cli.py  test_cli_mcp_metadata.py  test_compression.py  test_config_validation.py  test_context.py  test_dates.py  test_db.py  test_error_handling.py  test_events.py  test_graph.py  test_hooks.py  test_integration.py  test_memory_maintenance.py  test_new_features.py  test_path_security.py  test_performance.py  test_privacy.py  test_rich_observations.py  test_secrets.py  test_security.py  test_server.py  test_server_security.py  test_snapshot.py  test_structured.py  (+6 more)
(+117 files in other folders)
